<?xml version="1.0"?>
<package format="2">
	<name>mobile_robot</name>
	<version>0.0.0</version>
	<description>The mobile_robot package</description>

	<maintainer email="heroehs@todo.todo">heroehs</maintainer>

	<license>TODO</license>

	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>roscpp</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>ssoni_mobile_msgs</build_depend>

	<exec_depend>roscpp</exec_depend>
	<exec_depend>std_msgs</exec_depend>
	<exec_depend>ssoni_mobile_msgs</exec_depend>
	<!-- The export tag contains other, unspecified, tags -->
	<export>
<!-- Other tools can request additional information be placed here -->
	</export>
</package>
